--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html{
+  min-height:100%;
+}
 body {
   margin: 0;
   padding: 0;
@@ -6,6 +9,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #4db8ff;
+  min-height:100%;
+}
+
+form {
+  padding: 20px;
+  margin-top: 60px;
+  min-height:100%;
+
+}
+
+form button, form h5{
+  margin: 10px 0;
 }
 
 code {
